feat: continuação das estilizações globais e espaçamentos principais da pagina

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <div id="app">
-        <header>header</header>
-        <header>main</header>
-        <header>footer</header>
+        <header class="container">header</header>
+        <main>
+            <div class="container">main
+            </div>
+        </main>
+        <footer class="container">footer</footer>
     </div>
 </body>
 </html>
