--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
                     <li class="active">Galeria</li>
                 </ul>
             </nav>
-            <form action="">
-                serch
+            <form>
+                <div class="input-wrapper">
+                    <label for="search">Pesquise por imagens e coleções</label>
+                    <input id="search" type="text" placeholder="Pesquise por imagens e coleções">
+                </div>
             </form>
             <img class="avatar" src="https://randomuser.me/api/portraits/women/8.jpg" alt="Imagem de uma mulher">
         </header>
