--- a/index.html
+++ b/index.html
@@ -29,7 +29,64 @@
             <img class="avatar" src="https://randomuser.me/api/portraits/women/8.jpg" alt="Imagem de uma mulher">
         </header>
         <main>
-            <div class="container">main
+            <div class="container">
+                <h1>Galeria</h1>
+                <section class="gallery">
+                    <figure class="item">
+                        <img src="https://source.unsplash.com/random?a=1" alt="">
+                        <figcaption class="details">
+                            <h2>Workspace elétrica</h2>
+                            <div class="tags">
+                                <span>tag</span>
+                            </div>    
+                        </figcaption>
+                    </figure>
+                    <figure class="item">
+                        <img src="https://source.unsplash.com/random?b=1" alt="">
+                        <figcaption class="details">
+                            <h2>Dark and red</h2>
+                            <div class="tags">
+                                <span>tag</span>
+                            </div>    
+                        </figcaption>
+                    </figure>
+                    <figure class="item">
+                        <img src="https://source.unsplash.com/random?c=1" alt="">
+                        <figcaption class="details">
+                            <h2>Organização e grids</h2>
+                            <div class="tags">
+                                <span>tag</span>
+                            </div>    
+                        </figcaption>
+                    </figure>
+                    <figure class="item">
+                        <img src="https://source.unsplash.com/random?d=1" alt="">
+                        <figcaption class="details">
+                            <h2>Colméia</h2>
+                            <div class="tags">
+                                <span>tag</span>
+                            </div>    
+                        </figcaption>
+                    </figure>
+                    <figure class="item">
+                        <img src="https://source.unsplash.com/random?e=1" alt="">
+                        <figcaption class="details">
+                            <h2>setup de escritor</h2>
+                            <div class="tags">
+                                <span>tag</span>
+                            </div>    
+                        </figcaption>
+                    </figure>
+                    <figure class="item">
+                        <img src="https://source.unsplash.com/random?f=1" alt="">
+                        <figcaption class="details">
+                            <h2>Organização e grids</h2>
+                            <div class="tags">
+                                <span>tag</span>
+                            </div>    
+                        </figcaption>
+                    </figure>
+                </section>
             </div>
         </main>
         <footer class="container">© 2023 - Rocketseat Explorer</footer>
