--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="app">
         <header class="container">
             <nav>
-                <img src="./assets/camera.svg" alt="Imagem da logomarca">
+                <img class="logo" src="./assets/camera.svg" alt="Imagem da logomarca">
                 <ul>
                     <li>Home</li>
                     <li class="active">Galeria</li>
