feat: finalizando o projeto

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1>Galeria</h1>
                 <section class="gallery">
                     <figure class="item">
-                        <img src="https://source.unsplash.com/random?a=1" alt="">
+                        <img src="/assets/unsplash.png" alt="">
                         <figcaption class="details">
                             <h2>Workspace elétrica</h2>
                             <div class="tags">
@@ -42,7 +42,7 @@
                         </figcaption>
                     </figure>
                     <figure class="item">
-                        <img src="https://source.unsplash.com/random?b=1" alt="">
+                        <img src="/assets/unsplash2.png" alt="">
                         <figcaption class="details">
                             <h2>Dark and red</h2>
                             <div class="tags">
@@ -51,7 +51,7 @@
                         </figcaption>
                     </figure>
                     <figure class="item">
-                        <img src="https://source.unsplash.com/random?c=1" alt="">
+                        <img src="/assets/unsplash3.png" alt="">
                         <figcaption class="details">
                             <h2>Organização e grids</h2>
                             <div class="tags">
@@ -60,7 +60,7 @@
                         </figcaption>
                     </figure>
                     <figure class="item">
-                        <img src="https://source.unsplash.com/random?d=1" alt="">
+                        <img src="/assets/unsplash4.png" alt="">
                         <figcaption class="details">
                             <h2>Colméia</h2>
                             <div class="tags">
@@ -69,7 +69,7 @@
                         </figcaption>
                     </figure>
                     <figure class="item">
-                        <img src="https://source.unsplash.com/random?e=1" alt="">
+                        <img src="/assets/unsplash5.png" alt="">
                         <figcaption class="details">
                             <h2>setup de escritor</h2>
                             <div class="tags">
@@ -78,7 +78,7 @@
                         </figcaption>
                     </figure>
                     <figure class="item">
-                        <img src="https://source.unsplash.com/random?f=1" alt="">
+                        <img src="/assets/unsplash6.png" alt="">
                         <figcaption class="details">
                             <h2>Ergonomia e cores</h2>
                             <div class="tags">
@@ -87,7 +87,7 @@
                         </figcaption>
                     </figure>
                     <figure class="item">
-                        <img src="https://source.unsplash.com/random?g=1" alt="">
+                        <img src="/assets/unsplash.png" alt="">
                         <figcaption class="details">
                             <h2>Show de luzes</h2>
                             <div class="tags">
@@ -96,7 +96,7 @@
                         </figcaption>
                     </figure>
                     <figure class="item">
-                        <img src="https://source.unsplash.com/random?h=1" alt="">
+                        <img src="/assets/unsplash2.png" alt="">
                         <figcaption class="details">
                             <h2>Deep purple</h2>
                             <div class="tags">
@@ -105,7 +105,7 @@
                         </figcaption>
                     </figure>
                     <figure class="item">
-                        <img src="https://source.unsplash.com/random?i=1" alt="">
+                        <img src="/assets/unsplash3.png" alt="">
                         <figcaption class="details">
                             <h2>Multi-Screen</h2>
                             <div class="tags">
