--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <h1>Galeria</h1>
                 <section class="gallery">
-                    <figure class="item">
+                    <figure class="item" style="--delay:.6s">
                         <img src="/assets/unsplash.png" alt="">
                         <figcaption class="details">
                             <h2>Workspace elétrica</h2>
@@ -41,7 +41,7 @@
                             </div>    
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:.8s">
                         <img src="/assets/unsplash2.png" alt="">
                         <figcaption class="details">
                             <h2>Dark and red</h2>
@@ -50,7 +50,7 @@
                             </div>    
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:1s">
                         <img src="/assets/unsplash3.png" alt="">
                         <figcaption class="details">
                             <h2>Organização e grids</h2>
@@ -59,7 +59,7 @@
                             </div>    
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.2s">
                         <img src="/assets/unsplash4.png" alt="">
                         <figcaption class="details">
                             <h2>Colméia</h2>
@@ -68,7 +68,7 @@
                             </div>    
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.4s">
                         <img src="/assets/unsplash5.png" alt="">
                         <figcaption class="details">
                             <h2>setup de escritor</h2>
@@ -77,7 +77,7 @@
                             </div>    
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.6s">
                         <img src="/assets/unsplash6.png" alt="">
                         <figcaption class="details">
                             <h2>Ergonomia e cores</h2>
@@ -86,7 +86,7 @@
                             </div>    
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:1.8s">
                         <img src="/assets/unsplash.png" alt="">
                         <figcaption class="details">
                             <h2>Show de luzes</h2>
@@ -95,7 +95,7 @@
                             </div>    
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:2s">
                         <img src="/assets/unsplash2.png" alt="">
                         <figcaption class="details">
                             <h2>Deep purple</h2>
@@ -104,7 +104,7 @@
                             </div>    
                         </figcaption>
                     </figure>
-                    <figure class="item">
+                    <figure class="item" style="--delay:2.2s">
                         <img src="/assets/unsplash3.png" alt="">
                         <figcaption class="details">
                             <h2>Multi-Screen</h2>
